--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 
 :root {
     --card-size: 155px;
+    --card-pos: 0px;
     --orange: #FF6B00;
     --blue: #00A8DD;
 }
@@ -12,6 +13,10 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     scroll-behavior: smooth;
+}
+
+img {
+    width: 100%;
 }
 
 section {
@@ -76,8 +81,30 @@ nav > a {
     font-size: 22px;
 }
 
-/* section 2 */
+@media screen and (max-width: 768px) {
+    #one h1 {
+        font-size:2em;
+    }
+    #one p {
+        font-size: 18px;
+        padding: 1em;
+        padding-top: 0;
+    }
+}
+    
+@media screen and (max-width: 480px) {
+    nav {
+        padding: .5em;
+        padding-right: 1em;
+        font-size: 12px;
+    }
+    #one h1 {
+        font-size: 1.5em;
+    }
+}
 
+
+/* section 2 */
 
 #two {
     display: flex;
@@ -152,12 +179,322 @@ nav > a {
     margin-bottom: .4em;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 868px) {
     #two {
         display: grid;
         gap: 1em;
     }
-    #two > div {
+    #two > div:nth-child(1) {
+        justify-self: center;
+        align-self: end;
+    }
+    #two > div:nth-child(2) {
+        align-self: start;
+    }
+    .cards {
+        margin-right: 0;
+    }
+    #two-2 {
+        margin: 1em;
+        padding: .5em;
+    }
+    #two-2 h1 {
+        font-size: 24px;
+    }
+    #two-2 ul {
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .card {
+
+        margin: auto 0;
+    }
+    :root {
+        --card-size: 130px;
+    }
+    .card_img {
+        width: 25px;
+    }
+    .card_txt h1 {
+        font-size: 12px;
+        margin-bottom: 5px;
+    }
+    .card_txt p {
+        font-size: 10px;
+    }
+    #two-2 {
+        text-align: center;
+    }
+    #two-2 h1 {
+        padding: 0 1.5em;
+    }
+    #two-2 ul {
+        list-style-type: none;
+    }
+}
+
+/* section 3 */
+
+#three {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#three > div {
+    flex: 1;
+    padding: 1em;
+}
+
+#three-1-wrapper {
+    width: 70%;
+    margin: auto;
+}
+
+#three-cards {
+    position: relative;
+    width: 70%;
+    height: 250px;
+    margin: auto;
+}
+
+.three-card {
+    position: absolute;
+    width: calc(var(--card-size) + 100px);
+    height: var(--card-size);
+    /* box-shadow: 5px 6px 15px rgba(0, 0, 0, 0.25); */
+    border-radius: 12px;
+    padding: 14px;
+    padding-top: 25px;
+    color: white;
+    transition: .3s all ease;
+}
+
+.three-card h1 {
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: .4em;
+}
+
+.three-card:first-child {
+    z-index: 10;
+    top: var(--card-pos);
+    left: var(--card-pos);
+    background: linear-gradient(115.07deg, rgba(255, 227, 128, 0.95) 0%, rgba(128, 255, 209, 0.95) 0.01%, rgba(16, 16, 16, 0.85) 102.66%);
+}
+.three-card:nth-child(2) {
+    z-index: 20;
+    top: calc(var(--card-pos) + 50px);
+    left: calc(var(--card-pos) + 50px);
+    background: linear-gradient(115.07deg, rgba(97, 236, 255, 0.92) 0%, rgba(16, 16, 16, 0.9) 102.66%);
+    opacity: 0.95;
+}
+.three-card:last-child {
+    z-index: 30;
+    top: calc(var(--card-pos) + 100px);
+    left: calc(var(--card-pos) + 100px);
+    background: linear-gradient(115.07deg, #66FF91 0%, #101010 102.66%);
+}
+
+@media screen and (min-width: 700px) {
+    .three-card:nth-child(1):hover {
+        z-index: 100;
+        scale: 1.1;
+        transform: translate(60%, 90%);
+    }
+    
+    .three-card:nth-child(2):hover {
+        z-index: 100;
+        /* scale: 1.1; */
+        transform: translate(40%, 60%);
+    }
+    
+    .three-card:nth-child(3):hover {
+        z-index: 100;
+        scale: 1.3;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    #three {
+        display: grid;
+        gap: 1em;
+    }
+    #three > div:nth-child(1) {
+        align-self: end;
+    }
+    #three > div:nth-child(2) {
+        align-self: start;
+    }
+    #three-1 {
+        text-align: justify;
+        width: 700px;
+    }
+    #three-cards {
+        margin-top: 0;
+        width: 340px;
+    }
+    #three-2 {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #three > div {
+        width: 100%;
+    }
+    #three-1-wrapper {
+        width: 95%;
         margin: auto;
+    }
+    #three-1 h1 {
+        font-size: 22px;
+    }
+    #three-1 p {
+        font-size: 14px;
+    }
+    .three-card {
+        padding: .5em;
+    }
+    .three-card h1 {
+        margin-bottom: 0;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    #three-cards {
+        width: 70%;
+        margin: auto;
+    }
+    .three-card {
+        padding: 1em;
+        width: 190px;
+        height: 100px;
+    }
+    .three-card h1 {
+        margin-bottom: 0;
+        font-size: 15px;
+    }
+    .three-card p {
+        margin-bottom: 0;
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    #three-cards {
+        width: 90%;
+        margin: auto;
+    }
+}
+
+@media screen and (max-width: 340px) {
+    #three-cards {
+        width: 100%;
+        margin: auto;
+    }
+}
+
+/* section 4 */
+#four {
+    position: relative;
+    width: 100%;
+    display: grid;
+    place-content: center;
+}
+
+#wave-top-wrapper {
+    width: 100%;
+    margin-bottom: -10px;
+}
+
+#wave-top {
+    width: 100%;
+}
+
+#wave-bottom-wrapper {
+    width: 100%;
+    margin-top: -5px;
+}
+
+#wave-bottom {
+    width: 100%;
+}
+
+#four-wrapper {
+    display: grid;
+    place-content: center;
+}
+
+#four-main {
+    width: 100%;
+    min-height: 400px;
+    background: #0099FF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#four-main h1 {
+    text-align: center;
+    margin-bottom: 2em;
+    color: white;
+}
+
+#four-cards {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-row: inherit;
+}
+
+.four-card {
+    margin: 0 1em;
+    padding: 14px;
+    height: 90px;
+    width: 180px;
+    box-shadow: 5px 6px 15px rgba(0, 0, 0, 0.25);
+    border-radius: 12px;
+}
+
+.four-card:first-child {
+    background: #FFA178;
+}
+
+.four-card:nth-child(2) {
+    margin-top: 3em;
+    background: #F4FF77;
+}
+
+.four-card:last-child {
+    background: #FFA0CE;
+}
+
+#four-main > div {
+    width: 80%;
+    margin: auto;
+}
+
+
+@media screen and (max-width: 700px) {
+    #four-cards {
+        display: grid;
+        gap: 1em;
+    }
+
+    #four-main h1 {
+        margin-bottom: .5em;
+    }
+
+    .four-card:first-child {
+        align-self: start;
+    }
+
+    .four-card:nth-child(2) {
+        margin-top: 0;
+        margin-left: 1em;
     }
 }
